--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,23 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
+ 		<dependency>
+      		<groupId>com.google.code.gson</groupId>
+      		<artifactId>gson</artifactId>
+      		<version>2.7</version>
+      		<scope>compile</scope>
+    	</dependency>
+		
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-tdb</artifactId>
 			<version>3.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -106,6 +118,16 @@
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>9.3.0.M1</version>
+					<configuration>
+					
+						<scanIntervalSeconds>5</scanIntervalSeconds>
+						<systemProperties>
+							<systemProperty>
+								<name>log4j.configuration</name>
+								<value>file:./data/log4j.properties</value>
+							</systemProperty>
+						</systemProperties>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
